# proc_guard

./: Cargo.toml  LICENSE  README.md
src/: error.rs  guard.rs  lib.rs
src/platform/: mod.rs  unix.rs  windows.rs
tests/: proc_guard_test.rs  send_ctrl_c_test.rs  wait_timeout_test.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
