[package]
name = "proc_guard"
version = "0.2.0"
edition = "2021"
description = "A process guard that ensures the proper destruction of a child process in various scenarios"
repository = "https://github.com/fplu/proc_guard"
readme = "README.md"
license = "MIT"

[workspace]
members = ["utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
child_wait_timeout = "0.1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "wincon",
    "processenv",
    "processthreadsapi",
    "synchapi",
    "winbase",
    "minwinbase",
    "errhandlingapi",
    "winerror",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
utilities = { path = "utilities" }
